--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "project-gt",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "gsap": "^3.10.4",
-    "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.5",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
-  }
+	"name": "project-gt",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"gsap": "^3.10.4",
+		"next": "12.1.5",
+		"react": "18.1.0",
+		"react-dom": "18.1.0",
+		"@fortawesome/fontawesome-svg-core": "^6.1.1",
+		"@fortawesome/free-brands-svg-icons": "^6.1.1",
+		"@fortawesome/free-regular-svg-icons": "^6.1.1",
+		"@fortawesome/free-solid-svg-icons": "^6.1.1",
+		"@fortawesome/react-fontawesome": "^0.1.18"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.5",
+		"eslint": "8.14.0",
+		"eslint-config-next": "12.1.5",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.24"
+	}
 }
