--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@fortawesome/free-regular-svg-icons": "^6.1.1",
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
 		"@fortawesome/react-fontawesome": "^0.1.18",
+		"@headlessui/react": "^1.6.1",
 		"gsap": "^3.10.4",
 		"next": "12.1.5",
 		"react": "18.1.0",
