--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
 		"@fortawesome/react-fontawesome": "^0.1.18",
 		"@headlessui/react": "^1.6.1",
+		"embla-carousel-autoplay": "^6.2.0",
+		"embla-carousel-react": "^6.2.0",
 		"gsap": "^3.10.4",
 		"next": "12.1.5",
 		"react": "18.1.0",
+		"react-countup": "^6.2.0",
 		"react-dom": "18.1.0",
+		"react-gsap": "^3.2.1",
 		"sass": "^1.51.0"
 	},
 	"devDependencies": {
