--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
 		"@fortawesome/react-fontawesome": "^0.1.18",
 		"@headlessui/react": "^1.6.1",
+		"axios": "^0.27.2",
 		"embla-carousel-autoplay": "^6.2.0",
 		"embla-carousel-react": "^6.2.0",
 		"gsap": "^3.10.4",
